Segundo Commit para la entrega

--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador Biblioteca Digital</title>
+    <title>Simulador Biblioteca Gamer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <main>
-        <h1 id="titulo">Simulador de Préstamos de Biblioteca Digital</h1>
-        <p>
-            Este simulador recrea el flujo básico de una biblioteca virtual: registro de lectores,
-            consulta del catálogo, selección de libros y cálculo de multas por devolverlos con retraso.
-            Toda la interacción se realiza a través de cuadros de diálogo y de la Consola de JavaScript.
+    <main class="contenedor">
+        <h1 id="titulo" class="titulo">Biblioteca Gamer - Entregable 1</h1>
+        <p class="descripcion">
+            ¡Buenass! Soy Carmelo Gambale y este es mi primer proyecto en el curso de JavaScript. La idea es practicar
+            lógica básica recreando cómo funcionaría mi propio “GamePass” para amigos que recién arrancan.
         </p>
-        <p>
-            Por el momento se trabaja con un catálogo fijo y datos simulados que permiten practicar
-            estructuras condicionales, bucles y funciones. En futuras iteraciones se sumarán nuevas
-            reglas de negocio y mejoras visuales una vez que se incorporen más herramientas.
+        <p class="descripcion">
+            Por el momento, estuve creando una interfaz simple más que nada para practicar lo que se vio en clases y no tenia nada que hacer.
+        </p>
+        <p class="descripcion">
+            Para el futuro, tratare de agregar más funciones o cambiare el proyecto por completo, ya que todavia no decido que hacer.
+            Espero que les guste, profe y nos estamos viendo en las clases.
         </p>
     </main>
     <script src="script.js"></script>
